# lapulga-llm

./: .env.template  .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  RUNPOD_SETUP.md  SPEC.md  main.py  pyproject.toml  requirements.txt  tokenizer.json  train_gpt.py  train_mlx.py
data/: download_fineweb.py
docs/: benchmarks.md  glossary.md  journal.md  resources.md  til.md
records/lapulga-llm/: README.md  requirements.txt  submission.json  train_gpt.py
scripts/: build_submission.py  create_new_pod.py  infer.py  runpod_orchestrator.py
src/data/: dataset.py  loader.py  shard_loader.py  tokenizer.py  train_tokenizer.py
src/domain/: config.py
src/model/: mlx_backend.py  transformer.py
src/training/: loop.py
src/utils/: evaluate.py  evaluate_bpb.py  generate.py  quantize.py
tests/: test_official_scoring.py  test_spec_compliance.py
