[project]
name = "16mb-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=4.5.0",
    "mlx>=0.29.3",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
]
