[project]
name = "lapulga-llm"
version = "0.3.0"
description = "La Pulga: A tiny but fierce decoder-only Transformer for the 16MB Parameter Golf challenge."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.5.0",
    "torch>=2.1.0",
    "tokenizers>=0.22.2",
    "safetensors>=0.4.0",
    "sentencepiece>=0.2.0",
    "numpy>=1.24.0",
    "huggingface-hub>=0.20.0",
    "tqdm>=4.60.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
